fixed the content to col-sm-11 when sidebar is collapsed

--- a/css/clm.css
+++ b/css/clm.css
@@ -191,10 +191,10 @@ a.article, a.article:hover {
     CONTENT STYLE
 ----------------------------------------------------- */
 #content {
-    padding-top: 25px;
+    /*padding-top: 25px;*/
     min-height: 100vh;
     transition: all 0.3s;
-    margin-left: 15px;
+    /*margin-left: 15px;*/
 }
 
 #content.shorten {
